--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,6 +4,8 @@
   url: /about/
 - title: Publications
   url: /publications/
+- title: Teaching
+  url: /teaching/
 - title: Projects
   url: /projects/
 - title: Contact
