--- a/_config.yml
+++ b/_config.yml
@@ -6,3 +6,8 @@ url: https://kerryyu.github.io/person
 
 # aux_links:
 #   Template Repository: https://github.com/just-the-docs/just-the-docs-template
+
+
+just_the_docs:
+  css:
+    - /assets/css/custom.css
